--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 annotated-types==0.7.0
-anyio==4.5.0
+anyio==4.4.0
+bcrypt==4.2.0
 blinker==1.8.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.1
+deepdiff==8.0.1
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
-fastapi==0.115.0
+fastapi==0.114.1
 Flask==3.0.3
 Flask-SQLAlchemy==3.0.2
 greenlet==3.1.0
@@ -21,17 +26,29 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mysql-connector-python==9.0.0
+orderly-set==5.2.2
 packaging==24.1
+passlib==1.7.4
 pluggy==1.5.0
-pydantic==2.9.2
-pydantic_core==2.23.4
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.9.1
+pydantic_core==2.23.3
+PyJWT==2.9.0
 pytest==8.3.3
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.12
+PyYAML==6.0.2
 requests==2.32.3
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.35
+SQLAlchemy==2.0.34
 starlette==0.38.5
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.6
+watchfiles==0.24.0
+websockets==13.0.1
 Werkzeug==3.0.4
