--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,6 @@ dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.114.1
-Flask==3.0.3
-Flask-SQLAlchemy==3.0.2
 greenlet==3.1.0
 h11==0.14.0
 httpcore==1.0.5
@@ -25,7 +23,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-mysql-connector-python==9.0.0
+mysqlclient==2.2.5
 orderly-set==5.2.2
 packaging==24.1
 passlib==1.7.4
@@ -37,7 +35,6 @@ pydantic_core==2.23.3
 PyJWT==2.9.0
 pytest==8.3.3
 python-dotenv==1.0.1
-python-jose==3.3.0
 python-multipart==0.0.12
 PyYAML==6.0.2
 requests==2.32.3
