--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coverage==7.6.4
 cryptography==43.0.1
 deepdiff==8.0.1
 dnspython==2.7.0
