--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+astroid==3.3.5
 bcrypt==4.2.0
 blinker==1.8.2
 certifi==2024.8.30
@@ -7,8 +8,10 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coverage==7.6.4
 cryptography==43.0.1
 deepdiff==8.0.1
+dill==0.3.9
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -20,19 +23,23 @@ httptools==0.6.1
 httpx==0.27.2
 idna==3.8
 iniconfig==2.0.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mccabe==0.7.0
 mysqlclient==2.2.5
 orderly-set==5.2.2
 packaging==24.1
 passlib==1.7.4
+platformdirs==4.3.6
 pluggy==1.5.0
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
 PyJWT==2.9.0
+pylint==3.3.1
 pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.12
@@ -43,6 +50,7 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
+tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.6
