--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ deepdiff==8.0.1
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
-fastapi==0.114.1
+fastapi>=0.114.1
 greenlet==3.1.0
 h11==0.14.0
 httpcore==1.0.5
@@ -42,10 +42,10 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
-starlette==0.38.5
+starlette>=0.40.0
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.6
 watchfiles==0.24.0
 websockets==13.0.1
-Werkzeug==3.0.4
+Werkzeug==3.0.6
