--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -1,4 +1,4 @@
-name: CD Test
+name: Staging
 
 on:
   push:
@@ -6,8 +6,17 @@ on:
       - main
 
 jobs:
-  build:
+
+  pre-test:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0.39
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        env:
+          MYSQL_ROOT_PASSWORD: password
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -15,19 +24,55 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
-
+          python-version: 3.11
+           
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install wheel
           pip install -r requirements.txt
-  
-        
+          
+      - name: Create .env file
+        run: |
+          echo "DB_USER=root" > .env
+          echo "DB_NAME=kea_cars_dev" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_PASSWORD=password" >> .env
+          echo "SECRET_KEY=secret" >> .env
+
+      - name: Wait for MySQL to be ready
+        run: |
+          until mysqladmin ping -h"127.0.0.1" --silent; do
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+
+      - name: Run SQL Script
+        run: |
+          mysql -h 127.0.0.1 -u root -p"password" < scripts/mysql.sql
+
+      - name: Run pytests
+        run: |
+          pytests
+
+      - name: Start API Server
+        run: |
+          fastapi dev main.py &
+
+      - name: Wait for API to be ready
+        run: sleep 10 
+
+      - name: Install Newman
+        run: npm install -g newman
+
+      - name: Run Postman collection with Mysql environment (API tests)
+        run: newman run ./api-tests/KEA\ Car\ API\ Test.postman_collection.json --environment ./api-tests/KEA\ Car\ Mysql.postman_environment.json
+
   deploy:
-    needs: 
-      - build
     runs-on: ubuntu-latest
+    needs:
+      - pre-test
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
