--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
+          pip install "fastapi[standard]"
           pip install -r requirements.txt
           
       - name: Create .env file
