--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -151,8 +151,23 @@ jobs:
     needs:
       - deploy-staging
     steps:
-      - uses: actions/checkout@v3
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Clean Up Monitoring Logs
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "rm -rf /logs/*"
+
+      - name: Start Server Monitoring 
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "nohup sar 1 60 > /logs/cpu_mem_usage.log &"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "nohup iostat -x 1 60 > /logs/disk_usage.log &"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "nohup vmstat 1 60 > /logs/vmstat_usage.log &"
+
+      - uses: actions/checkout@v3
+      
       - name: Create reports directory
         run: mkdir reports
 
@@ -162,7 +177,11 @@ jobs:
           test-plan-path: ./load-tests/test-plan.jmx
           args: "-e -o ./reports/html/"
 
-      - name: SCP reports to server
+      - name: Stop Server Monitoring
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "killall sar iostat vmstat"
+
+      - name: SCP Load test reports to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: "${{ secrets.SERVER_HOST }}"
