--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -57,6 +57,11 @@ jobs:
         run: |
           pytest
 
+      - name: Ensure coverage is at least 80%
+        run: |
+          coverage run --source app -m pytest
+          coverage report --fail-under=80
+
       - name: Start API Server
         run: |
           fastapi dev main.py &
@@ -157,9 +162,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             rm -rf /logs/*
-            nohup sar 2 60 > /logs/cpu_mem_usage.log 2>&1 &
-            nohup iostat -x 2 60 > /logs/disk_usage.log 2>&1 &
-            nohup vmstat 2 60 > /logs/vmstat_usage.log 2>&1 &
+            nohup sar 100 60 > /logs/cpu_mem_usage.log 2>&1 &
+            nohup iostat -x 100 60 > /logs/disk_usage.log 2>&1 &
+            nohup vmstat 100 60 > /logs/vmstat_usage.log 2>&1 &
 
       - uses: actions/checkout@v3
       
@@ -187,8 +192,8 @@ jobs:
           host: "${{ secrets.SERVER_HOST }}"
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "/logs"
-          target: "./"
+          source: "./cpu_mem_usage.log"
+          target: "/logs"
 
       - name: Run SAR CPU Data Analyzer
         uses: niiicolai/sar-cpu-data-analyzer@v1.0.0
