--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - main2
+      - main
 
 jobs:
 
@@ -189,14 +189,9 @@ jobs:
           script: |
             killall sar iostat vmstat
 
-      - name: Download SAR logs
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: "${{ secrets.SERVER_HOST }}"
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "/logs"
-          target: "./"
+      - name: Download SAR log
+        run: |
+          curl -L "https://staging.c7pixel.com/logs/cpu_mem_usage.log" -o ./cpu_mem_usage.log
 
       - name: Run SAR CPU Data Analyzer
         uses: niiicolai/sar-cpu-data-analyzer@v1.0.0
