--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -169,7 +169,20 @@ jobs:
             nohup iostat -x 100 60 > /logs/disk_usage.log 2>&1 &
             nohup vmstat 100 60 > /logs/vmstat_usage.log 2>&1 &
 
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+           
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel
+          pip install "fastapi[standard]"
+          pip install -r requirements.txt
       
       - name: Create reports directory
         run: mkdir reports
