--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-          
+
       - name: Download SAR log
         run: |
           curl -L "https://staging.c7pixel.com/logs/cpu_mem_usage.log" -o ./cpu_mem_usage.log
       - name: clone https://github.com/niiicolai/sar-cpu-data-analyzer/tree/v1.0.0/ 
-        run: git clone https://github.com/niiicolai/sar-cpu-data-analyzer/tree/v1.0.0/
+        run: git clone https://github.com/niiicolai/sar-cpu-data-analyzer.git
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
