--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,4 @@ jobs:
 
       - name: Run Docker Container
         run: |
-          docker run --rm -v ${{ github.workspace }}:/data niiicolai/sar-cpu-data-analyzer:latest -i ./data/cpu_mem_usage.log -t ./data/load-tests/cpu-thresholds-test.json -j ./data/cpu-test-results.json -r ./data/cpu-test-report.html
+          docker run --rm -v ${{ github.workspace }}:/data niiicolai/sar-cpu-data-analyzer:latest -i /data/cpu_mem_usage.log -t /data/load-tests/cpu-thresholds-test.json -j /data/cpu-test-results.json -r /data/cpu-test-report.html
