--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - main2
+      - main
 
 jobs:
 
@@ -171,18 +171,6 @@ jobs:
 
       - name: Checkout Code
         uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11
-           
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install wheel
-          pip install "fastapi[standard]"
-          pip install -r requirements.txt
       
       - name: Create reports directory
         run: mkdir reports
