--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -61,6 +61,16 @@ jobs:
         run: |
           coverage run --source app -m pytest
           coverage report --fail-under=10
+          coverage html
+
+      - name: SCP Coverage report to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: "${{ secrets.SERVER_HOST }}"
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "./htmlcov"
+          target: "/coverage-report"
 
       - name: Pylint score must be at least 1.0
         run: pylint app/* --fail-under=1.0       
