--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pydantic==2.9.1
 pydantic_core==2.23.3
 PyJWT==2.9.0
 pylint==3.3.1
+pymongo==4.10.1
 pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.12
