--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette>=0.40.0
+tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.6
