--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -239,6 +239,7 @@ jobs:
     needs:
       - deploy-staging
       - pre-test
+      - load-test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
