use correct var.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,14 +44,14 @@ services:
     environment:
       - DB_HOST=${MYSQL_BACKEND_HOST}
       - DB_NAME=${MYSQL_BACKEND_DATABASE}
-      - DB_USER=${MYSQL_BACKEND_PASSWORD}
+      - DB_USER=${MYSQL_BACKEND_USER}
       - DB_PASSWORD=${MYSQL_BACKEND_PASSWORD}
       - DB_PORT=
-      - MYSQL_USER=${MYSQL_BACKEND_USER}
+      - MYSQL_USER=${MYSQL_ROOT_USER}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MONGO_DB_HOST=${MONGO_BACKEND_HOST}
       - MONGO_DB_PORT=${MONGO_BACKEND_PORT}
-      - MONGO_DB_NAME=${MONGO_BACKEND_HOST}
+      - MONGO_DB_NAME=${MONGO_BACKEND_DATABASE}
     depends_on:
       - mysql
       - mongodb
