--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,9 @@ services:
       - MONGO_DB_HOST=${MONGO_BACKEND_HOST}
       - MONGO_DB_PORT=${MONGO_BACKEND_PORT}
       - MONGO_DB_NAME=${MONGO_BACKEND_DATABASE}
+      - NEO4J_URI=bolt://neo4j
+      - NEO4J_USER=${NEO4J_ROOT_USER}
+      - NEO4J_PASSWORD=${NEO4J_ROOT_PASSWORD}
     depends_on:
       - mysql
       - mongodb
