--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 mccabe==0.7.0
 mysqlclient==2.2.5
+neo4j==5.26.0
 orderly-set==5.2.2
 packaging==24.1
 passlib==1.7.4
@@ -44,6 +45,7 @@ pymongo==4.10.1
 pytest==8.3.3
 python-dotenv==1.0.1
 python-multipart==0.0.12
+pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 rsa==4.9
