fixed an issue, where during ci/cd pipeline the cars over deadline got deleted by our event delete_old_none_purchased_cars

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run SQL Script
         run: |
-          mysql -h 127.0.0.1 -u root -p"password" < scripts/mysql.sql
+          mysql -h 127.0.0.1 -u root -p"password" < scripts/mysql_for_test.sql
 
       - name: Run pytests
         run: |
