--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -61,16 +61,16 @@ jobs:
         run: |
           coverage run --source app -m pytest
           coverage report --fail-under=10
-          coverage html
+    #      coverage html
 
-      - name: SCP Coverage report to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: "${{ secrets.SERVER_HOST }}"
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "./htmlcov"
-          target: "/coverage-report"
+    #  - name: SCP Coverage report to server
+    #    uses: appleboy/scp-action@v0.1.7
+    #    with:
+    #      host: "${{ secrets.SERVER_HOST }}"
+    #      username: ${{ secrets.SERVER_USERNAME }}
+    #      key: ${{ secrets.SSH_PRIVATE_KEY }}
+    #      source: "./htmlcov"
+    #      target: "/coverage-report"
 
       - name: Pylint score must be at least 7.0
         run: pylint app/* --fail-under=7.0
@@ -117,50 +117,50 @@ jobs:
           cd frontend
           npx cypress run
 
-  deploy-staging:
-    runs-on: ubuntu-latest
-    needs:
-      - pre-test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  #deploy-staging:
+  #  runs-on: ubuntu-latest
+  #  needs:
+  #    - pre-test
+  #  steps:
+  #    - name: Checkout code
+  #      uses: actions/checkout@v2
 
-      - name: Create .env file
-        run: echo "${{ secrets.ENV_FILE }}" > .env
+  #    - name: Create .env file
+  #      run: echo "${{ secrets.ENV_FILE }}" > .env
 
-      - name: SSH and Remove old files
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            rm -rf ${{ secrets.SERVER_LOCATION }}/github/workspace
+  #    - name: SSH and Remove old files
+  #      uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.SERVER_HOST }}
+  #        username: ${{ secrets.SERVER_USERNAME }}
+  #        key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #        script: |
+  #          rm -rf ${{ secrets.SERVER_LOCATION }}/github/workspace
 
-      - name: SCP files to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: "${{ secrets.SERVER_HOST }}"
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "${{ github.workspace }}"
-          target: "${{ secrets.SERVER_LOCATION }}"
+  #    - name: SCP files to server
+  #      uses: appleboy/scp-action@v0.1.7
+  #      with:
+  #        host: "${{ secrets.SERVER_HOST }}"
+  #        username: ${{ secrets.SERVER_USERNAME }}
+  #        key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #        source: "${{ github.workspace }}"
+  #        target: "${{ secrets.SERVER_LOCATION }}"
 
-      - name: SSH and Docker build
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd ${{ secrets.SERVER_LOCATION }}/github/workspace
-            chmod +x ./scripts/wait-for-it.sh
-            chmod +x ./scripts/start_and_restore.sh
-            chmod +x ./scripts/wait_for_sonarqube.sh          
-            docker build -t ${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} .
-            docker-compose -f docker-compose.yaml down
-            docker-compose -f docker-compose.yaml up -d
-            docker image prune -f
+  #    - name: SSH and Docker build
+  #      uses: appleboy/ssh-action@master
+  #      with:
+  #        host: ${{ secrets.SERVER_HOST }}
+  #        username: ${{ secrets.SERVER_USERNAME }}
+  #        key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #        script: |
+  #          cd ${{ secrets.SERVER_LOCATION }}/github/workspace
+  #          chmod +x ./scripts/wait-for-it.sh
+  #          chmod +x ./scripts/start_and_restore.sh
+  #          chmod +x ./scripts/wait_for_sonarqube.sh          
+  #          docker build -t ${{ secrets.IMAGE_NAME }}:${{ secrets.IMAGE_TAG }} .
+  #          docker-compose -f docker-compose.yaml down
+  #          docker-compose -f docker-compose.yaml up -d
+  #          docker image prune -f
 
 #  load-test:
 #    runs-on: ubuntu-latest
@@ -252,7 +252,7 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs:
-      - deploy-staging
+#      - deploy-staging
       - pre-test
 #      - load-test
     steps:
