--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -82,11 +82,11 @@ jobs:
       - name: Wait for API to be ready
         run: sleep 10
 
-#      - name: Install Newman
-#        run: npm install -g newman
-#
-#      - name: Run Postman collection with Mysql environment (API tests)
-#        run: newman run ./api-tests/KEA\ Car\ API\ Test.postman_collection.json --environment ./api-tests/KEA\ Car\ Mysql.postman_environment.json
+      - name: Install Newman
+        run: npm install -g newman
+
+      - name: Run Postman collection with Mysql environment (API tests)
+        run: newman run ./api-tests/KEA\ Car\ API\ Test.postman_collection.json --environment ./api-tests/KEA\ Car\ Mysql.postman_environment.json
 
       - name: Clone frontend repository
         uses: actions/checkout@v2
